k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: junctera-api-service
  namespace: junctera
spec:
  selector:
    app: junctera-api
  ports:
    - port: 3000
      targetPort: 3000
